<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomePage">

    <RelativeLayout
        android:id="@+id/CommunityText"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/MyCommunityText"
            android:text="My Community"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="#303032"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/MyCommunityText"
            android:id="@+id/WelcomeText"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#303032"
            android:text="A place for all your questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/DM"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/dmlogo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"/>

        <HorizontalScrollView
            android:id="@+id/StoryRow"
            android:layout_marginTop="10dp"
            android:layout_below="@id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/story_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/NewStory"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_marginRight="5dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/dummyprofilepic"
                        android:background="@drawable/story_circle" />

                    <ImageButton
                        android:src="@drawable/plus_sign"
                        android:id="@+id/StoryMore"
                        android:background="@drawable/green_circle"
                        android:scaleType="fitCenter"
                        android:padding="3dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignBottom="@id/NewStory"
                        android:layout_alignEnd="@id/NewStory"/>

                </RelativeLayout>

                <!-- Dynamic story thumbnails will be added here programmatically -->

            </LinearLayout>

        </HorizontalScrollView>

    </RelativeLayout>

    <View
        android:id="@+id/Divider_1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/CommunityText"
        android:layout_marginTop="10dp"
        android:background="#D8D8D8"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postRecyclerView"
        android:layout_below="@id/Divider_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="70dp">

        <Button
            android:id="@+id/myBtn"
            android:background="@drawable/housesymbolgreen"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Search"
            android:background="@drawable/searchsymbolgrey"
            android:layout_centerVertical="true"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_toRightOf="@id/myBtn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <ImageButton
            android:id="@+id/NewPost"
            android:src="@drawable/plus_sign"
            android:background="@drawable/green_circle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/Search"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <Button
            android:id="@+id/Profile"
            android:background="@drawable/profilelogogrey"
            android:layout_width="25dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/NewPost"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <Button
            android:id="@+id/Contact"
            android:background="@drawable/contactslogogrey"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/Profile"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </RelativeLayout>

</RelativeLayout>