...
            android:layout_marginRight="30dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/SearchBar"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Search"
...
                    android:layout_centerVertical="true"
                    android:background="@drawable/search_button"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/SearchLogo"
                    android:background="@drawable/searchlogo"
                    android:layout_centerVertical="true"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"/>

...
